guidopadilla fixed saldo screen list

--- a/mysite/templates/pagos/saldo_consulta.html
+++ b/mysite/templates/pagos/saldo_consulta.html
@@ -74,7 +74,7 @@
                 <th>Codigo de Curso</th>
                 <th>Descripcion de pago</th>
                 <th>Fecha Pago</th>
-                <th>Monto</th>
+                <th>Monto (Q)</th>
             </tr>
         </thead>
         <tfoot>
@@ -85,7 +85,7 @@
                 <th>Codigo de Curso</th>
                 <th>Descripcion de pago</th>
                 <th>Fecha Pago</th>
-                <th>Monto</th>
+                <th>Monto (Q)</th>
             </tr>
         </tfoot>
     </table>
