--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -21,7 +21,7 @@
                 <a class="navbar-a" href="{% url 'pagos:pagos_eliminados' %}">Pagos Eliminados</a>
                 <a class="navbar-a" href="{% url 'pagos:pagos_ingreso' %}">Ingreso de Pagos</a>
                 <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
-                <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra</a>
+                
             </div>
         </div>
         <div class="dropdown">
@@ -31,6 +31,7 @@
                     <a class="navbar-a" href="{% url 'usuarios:createuser_view' %}">Ingreso Usuario</a>
                     <a class="navbar-a" href="{% url 'usuarios:create_curso' %}">Crear Curso</a>
                     <a class="navbar-a" href="{% url 'usuarios:asignar_curso' %}">Asignar Curso</a>
+                    <a class="navbar-a" href="{% url 'usuarios:cobros_extra' %}">Cobros Extra</a>
                 </div>
             </div>
         </div>
