corrección de botón

--- a/mysite/templates/usuarios/cobros_extra.html
+++ b/mysite/templates/usuarios/cobros_extra.html
@@ -10,7 +10,7 @@
 			{{form_cobros_extra}}
 		</div>
 	<div class="btn-container">
-		<input class="btn btn-buscar" type="submit" value="Realizar asignacion">
+		<input class="btn btn-buscar" type="submit" value="Asignar cobro">
 	</div>
 </form>
 {% endblock content %}
